--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ h3 span {
 
 /* Map API */
 .mapWrap {
-  margin: 64px 0;
+  margin-top: 64px;
   padding: 0;
   position: relative;
 }
@@ -388,6 +388,40 @@ h3 span {
 #map {
   width: 100%;
   height: 600px;
+}
+.btnMap {
+  position: absolute;
+  top: 100px;
+  right: 0;
+  z-index: 3;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.7);
+  /* align-items: center; */
+  /* justify-self: center; */
+  /* text-align: center; */
+}
+.btnMap button {
+  /* background-color: transparent;*/
+  background-color: rgba(255, 255, 255, 0.7);
+  color: #01afff;
+  border: 1px solid #01afff;
+  padding: 5px;
+  border-radius: 15px;
+  width: 70px;
+  height: 30px;
+  font-size: 15px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.btnMap P {
+  margin-bottom: 5px;
+  text-align: center;
+  color: #555;
+}
+
+.btnMap button:hover {
+  background-color: #006a9b;
 }
 .textWrap {
   position: absolute;
